# video2doc

./: .gitignore  README.en.md  README.md  apm.yml  main.py  pyproject.toml
.github/skills/ffmpeg-audio-extraction/: SKILL.md
.github/skills/uv-cuda-setup/: SKILL.md
.github/skills/video-to-markdown/: SKILL.md
.github/skills/video-to-markdown/references/: example-output.md  pyproject-template.toml
.github/skills/whisper-transcription/: SKILL.md
.github/skills/whisper-transcription/references/: HOTWORD-CORRECTION.md
